<resources>
    <string name="app_name">香瓜社区</string>
    <string name="title_home">首页</string>
    <string name="title_private_photos">私照</string>
    <string name="title_collection">收藏</string>
    <string name="single_map">单图已收藏</string>
    <string name="single_album">专辑已收藏</string>
    <string name="title_my">我的</string>
    <string name="title_edit">编辑</string>
    <string name="title_cancel">取消</string>
    <string name="confirm_delete">确认删除</string>
    <string name="melon">瓜币</string>
    <string name="integral">积分</string>
    <string name="coupon">优惠券</string>
    <string name="membership_rights">会员权益</string>
    <string name="exit_logon">退出登录</string>
    <string name="about_us">关于我们</string>
    <string name="set_up_protection">设置隐私</string>
    <string name="set_up_password">修改登录密码</string>
    <string name="clear_data">清除缓存</string>
    <string name="collection">关注</string>
    <string name="purchase">已购买的</string>
    <string name="praise">给个好评</string>
    <string name="set_up">设置</string>
    <string name="obtain_sms">获取验证码</string>
    <string name="current_balance">当前余额</string>
    <string name="other_balance">其他余额</string>
    <string name="other_balance1">输入其他金额</string>
    <string name="sms">验证码</string>
    <string name="search">请输入内容</string>
    <string name="recharge_core">充值中心</string>
    <string name="recharge">确定充值</string>
    <string name="recharge_method">选择支付方式</string>
    <string name="zhifubao">支付宝</string>
    <string name="weixin">微信支付</string>
    <string name="login">登&#160;&#160;录</string>
    <string name="registration">注&#160;&#160;册</string>
    <string name="coming_soon">敬&#160;请&#160;期&#160;待</string>
    <string name="account_password_login">账号密码登录</string>
    <string name="account_no_password">忘记密码</string>
    <string name="loan_phone_error_empty">请输入手机号</string>
    <string name="loan_phone_error_no_correct">您输入的手机号不正确</string>
    <string name="loan_password_error_empty">请输入密码</string>
    <string name="loan_password_error_empty3">请输入原密码</string>
    <string name="loan_password_error_empty4">请输入新密码</string>
    <string name="loan_password_error_empty1">请输入确认密码</string>
    <string name="loan_password_error_empty2">请输入密码和确认密码不一致</string>
    <string name="loan_code_error_empty">请输入验证码</string>
    <string name="loan_name_loan_number">1234567890</string>
    <string name="no_coupon">暂时没有可使用的优惠券</string>
    <string name="account_password_code_registration">账号密码验证码注册</string>
    <string name="hint_phone_eidttext">手机号</string>
    <string name="version_update">版本更新</string>
    <string name="phone_sms">发送短线成功&#044;请查收</string>
    <string name="hint_password_eidttext">密&#160;码</string>
    <string name="already_read">我已阅读并同意</string>
    <string name="user_protocol">《用户服务条款》</string>
    <string name="hint_password_eidttext1">确认密码</string>
    <string name="hint_password_eidttext2">原密码</string>
    <string name="hint_password_eidttext3">新密码</string>
    <string name="complete">完&#160;&#160;成</string>
    <string name="nickname">昵&#160;&#160;称</string>
    <string name="asge">年&#160;&#160;龄</string>
    <string name="album">相&#160;&#160;册</string>
    <string name="camera">相&#160;&#160;机</string>
    <string name="clean">取&#160;&#160;消</string>
    <string name="determine">确&#160;&#160;定</string>
    <string name="share_weichat">微信</string>
    <string name="share_weichatfriend">朋友圈</string>
    <string name="share_qqroom">QQ空间</string>
    <string name="share_qq">QQ好友</string>
    <string name="share_zfb">支付宝</string>
    <string name="share_life_circle">支付宝</string>
    <string name="share_more">更多</string>

    <string name="qq">1106676426</string>
    <string name="qq_key">OfIO4BozsKwa12aK</string>
    <string name="WXAPI">wx657d6f5dbe23a682</string>
    <string name="zfb">2018011801962284</string>

    <string name="errcode_success">发送成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">权限验证失败</string>
    <string name="errcode_unknown">未知错误</string>
    <string name="errcode_send_fail">发送失败</string>



    <!-- &#064; 对应 @
       &#058; 对应 :
       &#160; 对应 空格
       &#032; 对应 空格
       &#033; 对应 !
       &#034; 对应  "（xml中需要在前面加入）
       &#035; 对应  #
       &#036; 对应  $
       &#037; 对应  %
       &#038; 对应  &
       &#039; 对应  ´
       &#040; 对应  (
       &#041; 对应  )
       &#042; 对应  *
       &#043; 对应  +
       &#044; 对应  ,
       &#045; 对应   -
       &#046; 对应  .
       &#047; 对应  /
       &#058; 对应  :
       &#059; 对应  ;
       &#060; 对应  <
       &#061; 对应  =
       &#062; 对应 -->

    <!--  &#063; 对应  ?
      &#064; 对应  @
      &#091; 对应  [
      &#092; 对应  - -
      &#093; 对应  ]
      &#094; 对应  ^
      &#095; 对应  _
      &#096; 对应  `
      &#123; 对应  {
      &#124; 对应  |
      &#125; 对应  }
      &#126; 对应  ~
      &#160; 对应  （这边是空格,在xml首字符中不会被忽略）
      &#161; 对应  ¡
      &#162; 对应  ¢
      &#163; 对应  £
      &#164; 对应  ¤
      &#165; 对应  ¥
      &#166; 对应  ¦
      &#167; 对应  §
      &#168; 对应  ¨
      &#169; 对应  ©
      &#170; 对应  ª
      &#171; 对应  «
      &#172; 对应  ¬
      &#173; 对应  ­
      &#174; 对应  ®
      &#175; 对应  ¯
      &#176; 对应  °
      &#177; 对应  ±
      &#178; 对应  ²
      &#179; 对应  ³
      &#180; 对应  ´
      &#181; 对应  µ
      &#182; 对应  ¶
      &#183; 对应  •
      &#184; 对应  ¸
      &#185; 对应  ¹
      &#186; 对应  º
      &#187; 对应  »
      &#188; 对应  ¼
      &#189; 对应  ½
      &#190; 对应  ¾
      &#191; 对应  ¿
      &#192; 对应  À
      &#193; 对应  Á
      &#194; 对应  Â
      &#195; 对应  Ã
      &#196; 对应  Ä
      &#197; 对应  Å
      &#198; 对应  Æ
      &#199; 对应  Ç
      &#200; 对应  È
      &#201; 对应  É
      &#202; 对应  Ê
      &#203; 对应  Ë
      &#204; 对应  Ì
      &#205; 对应  Í
      &#206; 对应  Î
      &#207; 对应  Ï
      &#208; 对应  Ð
      &#209; 对应  Ñ
      &#210; 对应  Ò
      &#211; 对应  Ó
      &#212; 对应  Ô
      &#213; 对应  Õ
      &#214; 对应  Ö
      &#215; 对应  ×
      &#216; 对应  Ø
      &#217; 对应  Ù
      &#218; 对应  Ú
      &#219; 对应  Û
      &#220; 对应  Ü
      &#221; 对应  Ý
      &#222; 对应  Þ
      &#223; 对应  ß
      &#224; 对应  à
      &#225; 对应  á
      &#226; 对应  â
      &#227; 对应  ã
      &#228; 对应  ä
      &#229; 对应  å
      &#230; 对应  æ
      &#231; 对应  ç
      &#232; 对应  è
      &#233; 对应  é
      &#234; 对应  ê
      &#235; 对应  ë
      &#236; 对应  ì
      &#237; 对应  í
      &#238; 对应  î
      &#239; 对应  ï
      &#240; 对应  ð
      &#241; 对应  ñ
      &#242; 对应  ò
      &#243; 对应  ó
      &#244; 对应  ô
      &#245; 对应  õ
      &#246; 对应  ö
      &#247; 对应  ÷
      &#248; 对应  ø
      &#249; 对应  ù
      &#250; 对应  ú
      &#251; 对应  û
      &#252; 对应  ü
      &#253; 对应  ý
      &#254; 对应  þ
      &#255; 对应  ÿ
      &#256; 对应  Ā
      &#257; 对应  ā
      &#258; 对应  Ă
      &#259; 对应  ă
      &#260; 对应  Ą
      &#261; 对应  ą
      &#262; 对应  Ć
      &#263; 对应  ć
      &#264; 对应  Ĉ
      &#265; 对应  ĉ
      &#266; 对应  Ċ
      &#267; 对应  ċ
      &#268; 对应  Č
      &#269; 对应  č
      &#270; 对应  Ď
      &#271; 对应  ď
      &#272; 对应  Đ
      &#273; 对应  đ
      &#274; 对应  Ē
      &#275; 对应  ē
      &#276; 对应  Ĕ
      &#277; 对应  ĕ
      &#278; 对应  Ė
      &#279; 对应  ė
      &#280; 对应  Ę
      &#281; 对应  ę
      &#282; 对应  Ě
      &#283; 对应  ě
      &#284; 对应  Ĝ
      &#285; 对应  ĝ
      &#286; 对应  Ğ
      &#287; 对应  ğ
      &#288; 对应  Ġ
      &#289; 对应  ġ
      &#290; 对应  Ģ
      &#291; 对应  ģ
      &#292; 对应  Ĥ
      &#293; 对应  ĥ
      &#294; 对应  Ħ
      &#295; 对应  ħ
      &#296; 对应  Ĩ
      &#297; 对应  ĩ
      &#298; 对应  Ī
      &#299; 对应  ī
      &#300; 对应  Ĭ
      &#301; 对应  ĭ
      &#302; 对应  Į
      &#303; 对应  į
      &#304; 对应  İ
      &#305; 对应  ı
      &#306; 对应  Ĳ
      &#307; 对应  ĳ
      &#308; 对应  Ĵ
      &#309; 对应  ĵ
      &#310; 对应  Ķ
      &#311; 对应  ķ
      &#312; 对应  ĸ
      &#313; 对应  Ĺ
      &#314; 对应  ĺ
      &#315; 对应  Ļ
      &#316; 对应  ļ
      &#317; 对应  Ľ
      &#318; 对应  ľ
      &#319; 对应  Ŀ
      &#320; 对应  ŀ
      &#321; 对应  Ł
      &#322; 对应  ł
      &#323; 对应  Ń
      &#324; 对应  ń
      &#325; 对应  Ņ
      &#326; 对应  ņ
      &#327; 对应  Ň
      &#328; 对应  ň
      &#329; 对应  ŉ
      &#330; 对应  Ŋ
      &#331; 对应  ŋ
      &#332; 对应  Ō
      &#333; 对应  ō
      &#334; 对应  Ŏ
      &#335; 对应  ŏ
      &#336; 对应  Ő
      &#337; 对应  ő
      &#338; 对应  Œ
      &#339; 对应  œ
      &#340; 对应  Ŕ
      &#341; 对应  ŕ
      &#342; 对应  Ŗ
      &#343; 对应  ŗ
      &#344; 对应  Ř
      &#345; 对应  ř
      &#346; 对应  Ś
      &#347; 对应  ś
      &#348; 对应  Ŝ
      &#349; 对应  ŝ
      &#350; 对应  Ş
      &#351; 对应  ş
      &#352; 对应  Š
      &#353; 对应  š
      &#354; 对应  Ţ
      &#355; 对应  ţ
      &#356; 对应  Ť
      &#357; 对应  ť
      &#358; 对应  Ŧ
      &#359; 对应  ŧ
      &#360; 对应  Ũ
      &#361; 对应  ũ
      &#362; 对应  Ū
      &#363; 对应  ū
      &#364; 对应  Ŭ
      &#365; 对应  ŭ
      &#366; 对应  Ů
      &#367; 对应  ů
      &#368; 对应  Ű
      &#369; 对应  ű
      &#370; 对应  Ų
      &#371; 对应  ų
      &#372; 对应  Ŵ
      &#373; 对应  ŵ
      &#374; 对应  Ŷ
      &#375; 对应  ŷ
      &#376; 对应  Ÿ
      &#377; 对应  Ź
      &#378; 对应  ź
      &#379; 对应  Ż
      &#380; 对应  ż
      &#381; 对应  Ž
      &#382; 对应  ž
      -->
</resources>
