<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="#e7e7e7"
        android:orientation="vertical">

        <com.sky.beautiful.View.MyTextview
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_15dp"
            android:layout_marginTop="@dimen/common_15dp"
            android:text="分享至"
            android:textColor="#333333"
            android:textSize="@dimen/common_14dp" />


        <RadioGroup
            android:id="@+id/tab_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_15dp"
            android:layout_marginRight="@dimen/common_15dp"
            android:layout_marginTop="@dimen/common_20dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tab_rb_1"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_10dp"
                    android:drawableTop="@mipmap/share_weichat"
                    android:text="@string/share_weichat" />

                <RadioButton
                    android:id="@+id/tab_rb_2"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_10dp"
                    android:drawableTop="@mipmap/share_weichatfriend"
                    android:text="@string/share_weichatfriend" />

                <RadioButton
                    android:id="@+id/tab_rb_3"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_10dp"
                    android:drawableTop="@mipmap/share_qqroom"
                    android:text="@string/share_qqroom" />

                <RadioButton
                    android:id="@+id/tab_rb_4"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_10dp"
                    android:drawableTop="@mipmap/share_qq"
                    android:text="@string/share_qq" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/tab_rb_6"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_10dp"
                    android:drawableTop="@mipmap/ic_zfb"
                    android:text="@string/share_life_circle" />

                <RadioButton
                    android:id="@+id/tab_rb_7"
                    style="@style/share_rb_style"
                    android:drawablePadding="@dimen/common_15dp"
                    android:drawableTop="@mipmap/ic_more"
                    android:text="@string/share_more" />
            </LinearLayout>
        </RadioGroup>

    </LinearLayout>

    <com.sky.beautiful.View.MyButton
        android:id="@+id/my_pop_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_50dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="取消"
        android:textColor="@color/commont_color666666"
        android:textSize="@dimen/common_18dp" />

</LinearLayout>