<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@mipmap/ic_my_bg" />

    <com.sky.beautiful.View.Random.BubbleLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include layout="@layout/title_tab" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title_relat"
        android:alpha="0.7"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/common_10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_48dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_phone_lon" />


            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/login_edit_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_10dp"
                    android:layout_weight="2"
                    android:background="@drawable/shape_corner_edittext"
                    android:digits="@string/loan_name_loan_number"
                    android:hint="@string/hint_phone_eidttext"
                    android:inputType="phone|number"
                    android:padding="@dimen/common_5dp"
                    android:singleLine="true"
                    android:textColor="@color/commont_color333333"
                    android:textColorHint="@color/commont_color999999"
                    android:textSize="@dimen/common_16dp" />

                <ImageView
                    android:id="@+id/logo_phone_editText_error1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/login_edit_phone"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/common_10dp"
                    android:src="@mipmap/ic_error"
                    android:visibility="invisible" />
            </RelativeLayout>

            <Button
                android:id="@+id/login_button_code"
                android:layout_width="0dp"
                android:layout_height="@dimen/common_32dp"
                android:layout_marginLeft="@dimen/common_10dp"
                android:layout_weight="1"
                android:background="@drawable/shape_corner_edittext"
                android:padding="@dimen/common_5dp"
                android:text="@string/obtain_sms"
                android:textColor="@color/commont_color333333"
                android:textColorHint="@color/commont_color999999"
                android:textSize="@dimen/common_14dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password_lon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/login_edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_10dp"
                    android:background="@drawable/shape_corner_edittext"
                    android:hint="@string/hint_password_eidttext"
                    android:inputType="textPassword"
                    android:padding="@dimen/common_5dp"
                    android:singleLine="true"
                    android:textColor="@color/commont_color333333"
                    android:textColorHint="@color/commont_color999999"
                    android:textSize="@dimen/common_16dp" />

                <ImageView
                    android:id="@+id/logo_phone_editText_error2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/login_edit_password"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/common_10dp"
                    android:src="@mipmap/ic_error"
                    android:visibility="invisible" />

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_10dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_password_lon" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <EditText
                    android:id="@+id/login_edit_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/common_10dp"
                    android:background="@drawable/shape_corner_edittext"
                    android:digits="@string/loan_name_loan_number"
                    android:hint="@string/sms"
                    android:inputType="phone|number"
                    android:padding="@dimen/common_5dp"
                    android:singleLine="true"
                    android:textColor="@color/commont_color333333"
                    android:textColorHint="@color/commont_color999999"
                    android:textSize="@dimen/common_16dp" />

                <ImageView
                    android:id="@+id/logo_phone_editText_error3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/login_edit_code"
                    android:layout_centerInParent="true"
                    android:layout_marginRight="@dimen/common_10dp"
                    android:src="@mipmap/ic_error"
                    android:visibility="invisible" />

            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alerady_image_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/common_10dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/alerady_image"
                android:layout_width="@dimen/common_20dp"
                android:layout_height="@dimen/common_20dp"
                android:src="@drawable/ic_selected" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_10dp"
                android:text="@string/already_read"
                android:textColor="@color/commont_color666666"
                android:textSize="@dimen/common_12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_protocol"
                android:textColor="@color/commont_color666666"
                android:textSize="@dimen/common_14dp" />


        </LinearLayout>

        <Button
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_40dp"
            android:layout_marginLeft="@dimen/common_10dp"
            android:layout_marginRight="@dimen/common_10dp"
            android:layout_marginTop="@dimen/common_10dp"
            android:background="@drawable/button_foreground_color"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="@dimen/common_16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_5dp"
            android:layout_marginRight="@dimen/common_5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/login_text_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/common_10dp"
                android:text="@string/account_password_login"
                android:textColor="@color/commont_colorff3a94"
                android:textSize="@dimen/common_12dp" />

            <TextView
                android:id="@+id/login_text_login1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_10dp"
                android:text="@string/account_no_password"
                android:textColor="@color/commont_colorff3a94"
                android:textSize="@dimen/common_12dp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
